Small fix ScrollbarAdapter

--- a/app/styles/components/_perfect-grid.scss
+++ b/app/styles/components/_perfect-grid.scss
@@ -5,6 +5,7 @@
     box-sizing: inherit;
   }
 
+  position: relative;
   display: flex;
   flex: 1;
   max-width: 100%;
